-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 21, 25
-
Component/s: hotspot
-
b26
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8358692 | 21.0.9 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8359657 | 17.0.17 | Martin Doerr | P3 | Resolved | Fixed | b01 |
Crashes have been observed while running the following tests:
make run-test TEST=test/hotspot/jtreg/compiler/jsr292/NullConstantReceiver.java JTREG="VM_OPTIONS=-XX:-UseSIGTRAP -XX:-ImplicitNullChecks"
make run-test TEST=test/hotspot/jtreg/compiler/exceptions/TestLateMHInlineExceptions.java JTREG="VM_OPTIONS=-XX:-UseSIGTRAP -XX:-ImplicitNullChecks"
Extracted from hs_err file:
# SIGSEGV (0xb) at pc=0x00007fee2226b968, pid=3332663, tid=3332690
# V [libjvm.so+0xc6b968] frame::interpreter_frame_method() const+0xb8
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00007fed00004000
V [libjvm.so+0xc6b968] frame::interpreter_frame_method() const+0xb8 (frame.cpp:407)
V [libjvm.so+0xffd8a8] InterpreterRuntime::note_trap(JavaThread*, int)+0x138 (interpreterRuntime.cpp:88)
V [libjvm.so+0xffdd6c] InterpreterRuntime::create_exception(JavaThread*, char*, char*)+0x30c (interpreterRuntime.cpp:380)
NullPointerExceptionTest.java also shows crashes with these flags (SIGSEGV due to missing explicit null check).
make run-test TEST=test/hotspot/jtreg/compiler/jsr292/NullConstantReceiver.java JTREG="VM_OPTIONS=-XX:-UseSIGTRAP -XX:-ImplicitNullChecks"
make run-test TEST=test/hotspot/jtreg/compiler/exceptions/TestLateMHInlineExceptions.java JTREG="VM_OPTIONS=-XX:-UseSIGTRAP -XX:-ImplicitNullChecks"
Extracted from hs_err file:
# SIGSEGV (0xb) at pc=0x00007fee2226b968, pid=3332663, tid=3332690
# V [libjvm.so+0xc6b968] frame::interpreter_frame_method() const+0xb8
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00007fed00004000
V [libjvm.so+0xc6b968] frame::interpreter_frame_method() const+0xb8 (frame.cpp:407)
V [libjvm.so+0xffd8a8] InterpreterRuntime::note_trap(JavaThread*, int)+0x138 (interpreterRuntime.cpp:88)
V [libjvm.so+0xffdd6c] InterpreterRuntime::create_exception(JavaThread*, char*, char*)+0x30c (interpreterRuntime.cpp:380)
NullPointerExceptionTest.java also shows crashes with these flags (SIGSEGV due to missing explicit null check).
- backported by
-
JDK-8358692 [PPC64] VM crashes with -XX:-UseSIGTRAP -XX:-ImplicitNullChecks
-
- Resolved
-
-
JDK-8359657 [PPC64] VM crashes with -XX:-UseSIGTRAP -XX:-ImplicitNullChecks
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/3ee18396
-
Commit(master)
openjdk/jdk21u-dev/fef4c29e
-
Commit(master)
openjdk/jdk/ba9f44c9
-
Review(master)
openjdk/jdk17u-dev/3619
-
Review(master)
openjdk/jdk21u-dev/1842
-
Review(master)
openjdk/jdk/25504
(3 links to)