8357793: [PPC64] VM crashes with -XX:-UseSIGTRAP -XX:-ImplicitNullChecks

Reviewed-by: phh
Backport-of: ba9f44c90fe8da2d97d67b6878ac2c0c14e35bd0